--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -25,7 +25,7 @@
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     </div>
-    <a type="submit" class="btn btn-default">Applications</a>
+    <a type="submit" href="Website/website-list.html" class="btn btn-default">Applications</a>
     <a type="submit" href="login.html" class="btn btn-default">Logout</a>
 </form>
 </body>
