--- a/public/assignment/Website/website-list.html
+++ b/public/assignment/Website/website-list.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Website-list</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
@@ -11,57 +12,65 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <div class="navbar-brand">
-            <a href="../profile.html">
-                <scan class="glyphicon glyphicon-menu-left"></scan>
-            </a>
+                <a href="../profile.html">
+                    <scan class="glyphicon glyphicon-menu-left"></scan>
+                </a>
                 Websites
-            <a href="website-new.html">
-                <scan class="glyphicon glyphicon-plus"></scan>
-            </a>
+                <a href="website-new.html">
+                    <scan class="glyphicon glyphicon-plus"></scan>
+                </a>
             </div>
         </div>
     </div>
 </nav>
 
 
-
 <div class="container-fluid">
-<table class="table table-striped">
-    <tbody>
-    <tr>
-        <td><a href="Page/page-list.html">Blogging App</a></td>
-        <td>
-            <a href="website-edit.html">
-                <scan class="glyphicon glyphicon-cog"></scan>
-            </a>
-        </td>
-    </tr>
-    <tr>
-        <td><a href="Page/page-list.html">Blogging App</a></td>
-        <td>
-            <a href="website-edit.html">
-                <scan class="glyphicon glyphicon-cog"></scan>
-            </a>
-        </td>
-    </tr>
-    <tr>
-        <td><a href="Page/page-list.html">Blogging App</a></td>
-        <td>
-            <a href="website-edit.html">
-                <scan class="glyphicon glyphicon-cog"></scan>
-            </a>
-        </td>
-    </tr>
-    <tr>
-        <td><a href="Page/page-list.html">Blogging App</a></td>
-        <td>
-            <a href="website-edit.html">
-                <scan class="glyphicon glyphicon-cog"></scan>
-            </a>
-        </td>
-    </tr>
-    </tbody>
+    <table class="table table-striped">
+        <tbody>
+        <tr>
+            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td>
+                <a href="website-edit.html">
+                    <scan class="glyphicon glyphicon-cog"></scan>
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td>
+                <a href="website-edit.html">
+                    <scan class="glyphicon glyphicon-cog"></scan>
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td>
+                <a href="website-edit.html">
+                    <scan class="glyphicon glyphicon-cog"></scan>
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="Page/page-list.html">Blogging App</a></td>
+            <td>
+                <a href="website-edit.html">
+                    <scan class="glyphicon glyphicon-cog"></scan>
+                </a>
+            </td>
+        </tr>
+        </tbody>
     </table>
+</div>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                Fixed Bottom
+            </a>
+        </div>
     </div>
+</nav>
 </body>
 </html>
