--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-<h1>Login</h1>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <div class="navbar-brand">
+                <a href="website-list.html">
+                    <scan class="glyphicon glyphicon-menu-left"></scan>
+                </a>
+                New Websites
+                <a href="website-new.html">
+                    <scan class="glyphicon glyphicon-ok"></scan>
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
 <form>
     <div class="form-group">
         <label for="exampleInputEmail1">Username</label>
@@ -24,9 +40,17 @@
         <label for="exampleInputPassword1">Last Name</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    </div>
     <a type="submit" href="Website/website-list.html" class="btn btn-default">Applications</a>
     <a type="submit" href="login.html" class="btn btn-default">Logout</a>
 </form>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                Fixed Bottom
+            </a>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
