--- a/public/assignment/Website/website-edit.html
+++ b/public/assignment/Website/website-edit.html
@@ -33,7 +33,7 @@
         <label for="exampleInputPassword1">Application Description</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    <a type="submit" href="Website/website-list.html" class="btn btn-default">Applications</a>
+    <a type="submit" href="website-list.html" class="btn btn-default">Applications</a>
 </form>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
