--- a/public/assignment/Website/website-list.html
+++ b/public/assignment/Website/website-list.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <div class="navbar-brand">
-                <a href="../profile.html">
+                <a href="../User/profile.html">
                     <scan class="glyphicon glyphicon-menu-left"></scan>
                 </a>
                 Websites
