--- a/public/assignment/Website/website-new.html
+++ b/public/assignment/Website/website-new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Website-list</title>
+    <title>Website-new</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
@@ -15,7 +15,7 @@
                 <a href="website-list.html">
                     <scan class="glyphicon glyphicon-menu-left"></scan>
                 </a>
-                New Websites
+                New Website
                 <a href="website-new.html">
                     <scan class="glyphicon glyphicon-ok"></scan>
                 </a>
