beautifying user pages

--- a/public/assignment/User/login.html
+++ b/public/assignment/User/login.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
     <title>Login</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,8 +23,8 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <a type="submit" href="profile.html" class="btn btn-default">Submit</a>
-        <a type="submit" href="register.html" class="btn btn-default">Register</a>
+        <a type="submit" href="profile.html" class="btn btn-primary btn-block">Submit</a>
+        <a type="submit" href="register.html" class="btn btn-success btn-block ">Register</a>
     </form>
 
 </div>
