--- a/public/assignment/User/login.html
+++ b/public/assignment/User/login.html
@@ -8,6 +8,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
 <a type="submit" href="../../index.html" class="btn btn-default">Back</a>
@@ -24,7 +25,7 @@
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
         <a type="submit" href="profile.html" class="btn btn-primary btn-block">Submit</a>
-        <a type="submit" href="register.html" class="btn btn-success btn-block ">Register</a>
+        <a type="submit" href="register.html" class="btn btn-success btn-block">Register</a>
     </form>
 
 </div>
