--- a/public/assignment/Website/website-list.html
+++ b/public/assignment/Website/website-list.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
     <title>Website-list</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -10,16 +13,19 @@
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <div class="navbar-brand">
-                <a href="../User/profile.html">
-                    <scan class="glyphicon glyphicon-menu-left"></scan>
-                </a>
+        <div class="navbar-footer">
+            <a class="navbar-brand"href="../User/profile.html">
+                <scan class="glyphicon glyphicon-menu-left"></scan>
+            </a>
+            <a class="navbar-brand" href="website-new.html">
                 Websites
-                <a href="website-new.html">
-                    <scan class="glyphicon glyphicon-plus"></scan>
+            </a>
+            <p class="navbar-text pull-right">
+                <a href="website-new.html" class="navbar-link">
+                      <span class="glyphicon glyphicon-plus">
+                      </span>
                 </a>
-            </div>
+            </p>
         </div>
     </div>
 </nav>
@@ -33,6 +39,7 @@
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
+                    <scan class="glyphicon glyphicon-play"></scan>
                 </a>
             </td>
         </tr>
@@ -41,6 +48,7 @@
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
+                    <scan class="glyphicon glyphicon-play"></scan>
                 </a>
             </td>
         </tr>
@@ -49,6 +57,7 @@
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
+                    <scan class="glyphicon glyphicon-play"></scan>
                 </a>
             </td>
         </tr>
@@ -57,6 +66,7 @@
             <td>
                 <a href="website-edit.html">
                     <scan class="glyphicon glyphicon-cog"></scan>
+                    <scan class="glyphicon glyphicon-play"></scan>
                 </a>
             </td>
         </tr>
