--- a/public/assignment/Website/website-edit.html
+++ b/public/assignment/Website/website-edit.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
     <title>Website-edit</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -30,11 +33,12 @@
         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Application Description</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="websiteDescription">Application Description</label>
+        <textarea type="text" class="form-control" id="websiteDescription" rows="10" placeholder="Description"></textarea>
     </div>
-    <a type="submit" href="website-list.html" class="btn btn-default">Applications</a>
+    <a type="submit" href="website-list.html" class="btn btn-default btn-danger btn-block">Applications</a>
 </form>
+
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-header">
