--- a/public/assignment/Website/website-edit.html
+++ b/public/assignment/Website/website-edit.html
@@ -11,18 +11,22 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <div class="navbar-brand">
-                <a href="website-list.html">
-                    <scan class="glyphicon glyphicon-menu-left"></scan>
+        <div class="navbar-footer">
+            <a class="navbar-brand"href="../User/profile.html">
+                <scan class="glyphicon glyphicon-menu-left"></scan>
+            </a>
+            <a class="navbar-brand" href="website-new.html">
+                Edit Website
+            </a>
+            <p class="navbar-text pull-right">
+                <a href="website-list.html" class="navbar-link">
+                      <span class="glyphicon glyphicon-ok">
+                      </span>
                 </a>
-                Edit Websites
-                <a href="website-new.html">
-                    <scan class="glyphicon glyphicon-ok"></scan>
-                </a>
-            </div>
+            </p>
         </div>
     </div>
 </nav>
@@ -41,11 +45,15 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                Fixed Bottom
-            </a>
+        <div class="navbar-footer">
+            <p class="navbar-text pull-right">
+                <a href="../User/profile.html" class="navbar-link">
+                      <span class="glyphicon glyphicon-user">
+                      </span>
+                </a>
+            </p>
         </div>
     </div>
+</nav>
 </body>
 </html>
