--- a/public/assignment/Website/website-list.html
+++ b/public/assignment/Website/website-list.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-footer">
@@ -75,10 +76,13 @@
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                Fixed Bottom
-            </a>
+        <div class="navbar-footer">
+            <p class="navbar-text pull-right">
+                <a href="../User/profile.html" class="navbar-link">
+                      <span class="glyphicon glyphicon-user">
+                      </span>
+                </a>
+            </p>
         </div>
     </div>
 </nav>
