--- a/public/assignment/User/profile.html
+++ b/public/assignment/User/profile.html
@@ -48,7 +48,7 @@
     <a class="btn btn-primary btn-block"
        href="../Website/website-list.html">Websites</a>
     <a class="btn btn-danger btn-block"
-       href="login.html">Logout</a>
+       href="login.view.client.html">Logout</a>
 </form>
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
