--- a/public/assignment/User/register.html
+++ b/public/assignment/User/register.html
@@ -26,7 +26,7 @@
         <input type="password" class="form-control" id="confirmpass" placeholder="Password">
     </div>
     <a type="submit" href="profile.html" class="btn btn-primary btn-block">Register</a>
-    <a type="submit" href="login.html" class="btn btn-danger btn-block">Cancel</a>
+    <a type="submit" href="login.view.client.html" class="btn btn-danger btn-block">Cancel</a>
 </form>
 </body>
 </html>
