changed files from assignment 2 to match view pattern

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -13,10 +13,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
     <script src="JS/app.js"></script>
+    <script src="JS/route.js"></script>
 
-    <title>Hello World AngularJS</title>
+    <title>Assignment Index</title>
 </head>
 <body>
+
+
 <div ngview></div>
+
+
+
 </body>
 </html>
