--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -10,6 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
     <script src="JS/app.js"></script>
     <script src="JS/route.js"></script>
+    <script src="JS/services/user.service.client.js"></script>
+    <script src="JS/services/website.service.client.js"></script>
 </head>
 <body>
 <div ng-view></div>
