created controller boiler plate

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -8,10 +8,18 @@
     <link href="CSS/style.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+
     <script src="JS/app.js"></script>
     <script src="JS/route.js"></script>
+
     <script src="JS/services/user.service.client.js"></script>
     <script src="JS/services/website.service.client.js"></script>
+
+    <script src="views/User/login.controller.client.js"></script>
+    <script src="views/User/profile.controller.client.js"></script>
+    <script src="views/Website/website-list.controller.client.js"></script>
+    <script src="views/Website/website-edit.controller.client.js"></script>
+
 </head>
 <body>
 <div ng-view></div>
