got login controller to check credentials

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -14,9 +14,12 @@
 
     <script src="JS/services/user.service.client.js"></script>
     <script src="JS/services/website.service.client.js"></script>
+    <script src="JS/services/page.service.client.js"></script>
+    <script src="JS/services/widget.service.client.js"></script>
 
     <script src="views/User/login.controller.client.js"></script>
     <script src="views/User/profile.controller.client.js"></script>
+    <script src="views/User/register.controller.client.js"></script>
     <script src="views/Website/website-list.controller.client.js"></script>
     <script src="views/Website/website-edit.controller.client.js"></script>
 
