--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -20,8 +20,18 @@
     <script src="views/User/login.controller.client.js"></script>
     <script src="views/User/profile.controller.client.js"></script>
     <script src="views/User/register.controller.client.js"></script>
+
     <script src="views/Website/website-list.controller.client.js"></script>
     <script src="views/Website/website-edit.controller.client.js"></script>
+    <script src="views/Website/website-new.controller.client.js"></script>
+
+    <script src="views/Page/page-list.controller.client.js"></script>
+    <script src="views/Page/page-edit.controller.client.js"></script>
+    <script src="views/Page/page-new.controller.client.js"></script>
+    
+    <script src="views/Widget/widget-list.controller.client.js"></script>
+    <script src="views/Widget/widget-edit.controller.client.js"></script>
+    <script src="views/Widget/widget-new.controller.client.js"></script>
 
 </head>
 <body>
