--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -17,21 +17,21 @@
     <script src="JS/services/page.service.client.js"></script>
     <script src="JS/services/widget.service.client.js"></script>
 
-    <script src="views/User/login.controller.client.js"></script>
-    <script src="views/User/profile.controller.client.js"></script>
-    <script src="views/User/register.controller.client.js"></script>
+    <script src="views/user/login.controller.client.js"></script>
+    <script src="views/user/profile.controller.client.js"></script>
+    <script src="views/user/register.controller.client.js"></script>
 
-    <script src="views/Website/website-list.controller.client.js"></script>
-    <script src="views/Website/website-edit.controller.client.js"></script>
-    <script src="views/Website/website-new.controller.client.js"></script>
+    <script src="views/website/website-list.controller.client.js"></script>
+    <script src="views/website/website-edit.controller.client.js"></script>
+    <script src="views/website/website-new.controller.client.js"></script>
 
-    <script src="views/Page/page-list.controller.client.js"></script>
-    <script src="views/Page/page-edit.controller.client.js"></script>
-    <script src="views/Page/page-new.controller.client.js"></script>
+    <script src="views/page/page-list.controller.client.js"></script>
+    <script src="views/page/page-edit.controller.client.js"></script>
+    <script src="views/page/page-new.controller.client.js"></script>
     
-    <script src="views/Widget/widget-list.controller.client.js"></script>
-    <script src="views/Widget/widget-edit.controller.client.js"></script>
-    <script src="views/Widget/widget-new.controller.client.js"></script>
+    <script src="views/widget/widget-list.controller.client.js"></script>
+    <script src="views/widget/widget-edit.controller.client.js"></script>
+    <script src="views/widget/widget-new.controller.client.js"></script>
 
 </head>
 <body>
