--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Web Dev Course Home Page</h1>
-
+<img src="cookieMonster.jpg"/>
     <p>
         Customize this home page to your linking.
     </p>
