--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -5,11 +5,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+    <link href="CSS/jquery-ui.css" rel="stylesheet"/>
     <link href="CSS/style.css" rel="stylesheet"/>
+    <link href="CSS/textAngular.css" rel="stylesheet"/>
+
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+
+    <script src="JS/js/textAngular-rangy.min.js"></script>
+    <script src="JS/js/textAngular.min.js"></script>
+    <script src="JS/js/textAngular-sanitize.min.js"></script>
 
     <script src="JS/app.js"></script>
     <script src="JS/route.js"></script>
@@ -19,21 +27,21 @@
     <script src="JS/services/page.service.client.js"></script>
     <script src="JS/services/widget.service.client.js"></script>
 
-    <script src="views/user/login.controller.client.js"></script>
-    <script src="views/user/profile.controller.client.js"></script>
-    <script src="views/user/register.controller.client.js"></script>
+    <script src="views/User/login.controller.client.js"></script>
+    <script src="views/User/profile.controller.client.js"></script>
+    <script src="views/User/register.controller.client.js"></script>
 
-    <script src="views/website/website-list.controller.client.js"></script>
-    <script src="views/website/website-edit.controller.client.js"></script>
-    <script src="views/website/website-new.controller.client.js"></script>
+    <script src="views/Website/website-list.controller.client.js"></script>
+    <script src="views/Website/website-edit.controller.client.js"></script>
+    <script src="views/Website/website-new.controller.client.js"></script>
 
-    <script src="views/page/page-list.controller.client.js"></script>
-    <script src="views/page/page-edit.controller.client.js"></script>
-    <script src="views/page/page-new.controller.client.js"></script>
+    <script src="views/Page/page-list.controller.client.js"></script>
+    <script src="views/Page/page-edit.controller.client.js"></script>
+    <script src="views/Page/page-new.controller.client.js"></script>
     
-    <script src="views/widget/widget-list.controller.client.js"></script>
-    <script src="views/widget/widget-edit.controller.client.js"></script>
-    <script src="views/widget/widget-new.controller.client.js"></script>
+    <script src="views/Widget/widget-list.controller.client.js"></script>
+    <script src="views/Widget/widget-edit.controller.client.js"></script>
+    <script src="views/Widget/widget-new.controller.client.js"></script>
 
 </head>
 <body>
