attempting to create shared repo with project partner

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -15,9 +15,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 
-    <script src="JS/js/textAngular-rangy.min.js"></script>
-    <script src="JS/js/textAngular.min.js"></script>
-    <script src="JS/js/textAngular-sanitize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-rangy.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-sanitize.js"></script>
 
     <script src="JS/app.js"></script>
     <script src="JS/route.js"></script>
