--- a/public/project/index.html
+++ b/public/project/index.html
@@ -12,20 +12,20 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link href="project/css/style.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
 
     <script src="app.js"></script>
     <script src="config.js"></script>
 
-    <script src="project/services/user.service.client.js"></script>
+    <script src="services/user.service.client.js"></script>
 
-    <script src="project/views/general/home.controller.client.js"></script>
-    <script src="project/views/general/login.controller.client.js"></script>
-    <script src="project/views/general/register.controller.client.js"></script>
+    <script src="views/general/home.controller.client.js"></script>
+    <script src="views/general/login.controller.client.js"></script>
+    <script src="views/general/register.controller.client.js"></script>
 
-    <script src="project/views/user/user-home.controller.client.js"></script>
+    <script src="views/user/user-home.controller.client.js"></script>
 
 </head>
 <body ng-app="TVTracker">
