adding elements from an old web dev project

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
+    <link type="text/css" rel="stylesheet" href="CSS/headerStyle.css"/>
+    <title> Grant Merrill's Portfolio</title>
 </head>
 <body>
-    <h1>Web Dev Course Home Page</h1>
-<img src="cookieMonster.jpg"/>
-    <p>
-        Customize this home page to your linking.
-    </p>
+    <div>
+        <table class="header">
+            <tr>
+                <td>
+                    <a href="http://www.ccs.neu.edu/home/merrill9/"> Home</a>
+                </td>
+                <td>
+                    <a href="http://www.ccs.neu.edu/home/merrill9/projects/"> Projects</a>
+                </td>
+                <td>
+                    <a href="http://www.ccs.neu.edu/home/merrill9/blog/"> Blog</a>
+                </td>
+                <td>
+                    <a href="http://www.ccs.neu.edu/home/merrill9/reading/"> What I'm Reading</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <table>
+        <tr>
+            <td><img src="http://www.ccs.neu.edu/home/merrill9/websiteprofile.jpg" width="300" /></td>
+            <td>
+                <h1 style="text-align:center"><strong>
+                    This site is a work in progress. Feel welcome to email me feed back.
+                </strong></h1>
+                <h1 style="text-align:center"><strong>
+                    GRANT EDWARD MERRILL
+                </strong></h1>
+                <h2 style="text-align:center">
+                    Software Engineer
+                </h2>
+                <p style="text-align:center">
+                    (510) 684 8783
+                </p>
+                <p style="text-align:center">
+                    merrill.grant9@gmail.com
+                </p>
+                <p style="text-align:center">
+                    <a href= http://www.linkedin.com/in/grantmerrill>
+                        http://www.linkedin.com/in/grantmerrill
+                    </a>
+                </p>
+                <p style="text-align:center">
+                    <a href=  http://www.codecademy.com/moonthroughglass>
+                        Check out my Code Academy progress.
+                    </a>
+                </p>
+                <p style="text-align:center">
+                    <a href= https://github.com/Maelstroms>
+                        Check out my github.
+                    </a>
+                </p>
+                <p style="text-align:center">
+                    <a href= https://bitbucket.org/Maelstroms/homework1>
+                        A mobile project I've been working on for class.
+                        (Android Studio)
+                    </a>
+                </p>
+                <p style="text-align:center">
+                    <img src="http://projecteuler.net/profile/tail666.png"/>
+                </p>
+            </td>
+            <td><img src="http://www.ccs.neu.edu/home/merrill9/websitefam.jpg" width="600" /></td>
+        </tr>
+    </table>
 
     <h2>Required links</h2>
     <ul>
         <li>
-            <a href="project/index.html">Project</a>
+            <a href="https://tvtracker-chrismiramontes.rhcloud.com/#/home">Project</a>
         </li>
         <li>
             <a href="assignment/index.html">Assignment</a>
